--- a/ForgetCNot/AndroidManifest.xml
+++ b/ForgetCNot/AndroidManifest.xml
@@ -9,9 +9,9 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-feature android:name="android.hardware.location.network" />
-	<uses-feature android:name="android.hardware.location.gps" />
-	<uses-feature android:name="android.hardware.wifi" />
+    <uses-feature android:name="android.hardware.location.network" android:required="false"/>
+	<uses-feature android:name="android.hardware.location.gps" android:required="false"/>
+	<uses-feature android:name="android.hardware.wifi" android:required="false"/>
     <application android:icon="@drawable/icon1" android:label="@string/app_name">
         <uses-library android:name="com.google.android.maps" />
         
